# djang-react-typescript-tailwindcss-vitejs-template

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/django_app/: settings.py  urls.py
src/home/: urls.py  views.py
src/home/static/home/: home.js
src/home/templates/home/: index.html
templates/: base.html
var/lib/: db.sqlite3
