[project]
name = "django-app"
version = "1.0.0"
description = "Django, ReactJS, Typescript, Tailwindcss, ViteJS Application"
authors = [
]
dependencies = [
    "django>=5.2.1",
    "django-vite-plugin>=4.1.0",
    "python-decouple>=3.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "pytest-django>=4.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_app"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_app.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
